--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
   "scripts": {
     "test": "grunt test"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bower": "^1.8.0",
+    "grunt-cli": "^1.2.0"
+  }
 }
